Ready for first generation test